# glma

./: .gitignore  .gitmodules  README.md  develop-compacted.md  develop.ipynb  pyproject.toml
.foam/templates/: daily-note.md
.pi/: gsd  gsd-file-manifest.json
.pi/gsd/references/: continuation-format.md  ui-brand.md
.pi/gsd/templates/: DEBUG.md  UAT.md
.pi/gsd/workflows/: add-phase.md  audit-milestone.md  complete-milestone.md  discuss-phase-assumptions.md  discuss-phase.md  discuss-phase.md.bak  execute-phase.md  execute-phase.md.bak  execute-plan.md  help.md  insert-phase.md  list-phase-assumptions.md  (+17 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
00-dev-log/: 00-template.md  2025-07-15.md  2025-07-17.md
00-supporting-files/data/: sample.env.file
02-development/linux_kernel/: develop.ipynb
02-development/use_case/: develop.ipynb
02-worktrees/: README.md
src/glma/: __init__.py  __main__.py  cli.py  config.py  export.py  models.py  summaries.py  watch.py
tests/: test_chunks.py  test_cli.py  test_comments.py  test_config.py  test_detector.py  test_export.py  test_incremental.py  test_notebook.py  test_parser.py  test_pipeline.py  test_progress.py  test_providers.py  test_query_formatter.py  test_query_full.py  test_relationships_c.py  test_relationships_python.py  test_resolver.py  test_store.py  test_store_rels.py  test_summarize.py  test_variables.py  test_walker.py  test_watch.py  test_writer.py  test_writer_rels.py
tests/fixtures/: commented.py  sample.c  sample.py
tests/integration/: test_full_index.py
(+102 files in other folders)
