[project]
name = "glma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kuzu>=0.10.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "yfiles-jupyter-graphs>=1.10.6",
    "yfiles-jupyter-graphs-for-kuzu>=0.0.4",
    "openai>=1.91.0",
    "python-dotenv>=1.1.0",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-python>=0.23.6",
    "tree-sitter>=0.24.0",
]
