[project]
name = "glma"
version = "0.1.0"
description = "CLI tool that indexes codebases into a queryable graph database with companion markdown output"
requires-python = ">=3.13"
dependencies = [
    "real-ladybug>=0.15.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-python>=0.25.0",
    "typer>=0.24.1",
    "rich>=14.0",
    "nbformat>=5.10",
    "pydantic>=2.12",
    "watchfiles>=1.0",
]

[project.scripts]
glma = "glma.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]
ai = [
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glma"]

[tool.ruff]
line-length = 100
target-version = "py313"
